# flint

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FLINT_COMPLETE_BIBLE.md  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  railway.toml  render.yaml  vercel.json
.cursor/rules/: toggle-component.mdc
.github/workflows/: ci.yml  publish.yml
dashboard/: .env.example  .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  theme.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: Intro.tsx  LoadingScreen.tsx  LoginPage.tsx  RunChoiceModal.tsx  Settings.tsx  Toggle.tsx  TutorialModal.tsx
dashboard/src/components/AgentChat/: ChatInterface.tsx  LiveDAGPanel.tsx  StreamingText.tsx
dashboard/src/components/AgentNode/: AgentNode.tsx  AgentReasoningTrace.tsx
dashboard/src/components/DAGVisualization/: TaskNode.tsx  index.tsx
dashboard/src/context/: AuthContext.tsx
dashboard/src/data/: templates.json
dashboard/src/hooks/: useFlintAPI.ts  useWebSocket.ts
dashboard/src/pages/: Agent.tsx
dashboard/src/utils/: userAnalytics.ts  usernameGenerator.ts
examples/: arxiv_digest.json  db_sync.json  github_monitor.json  ml_pipeline.json  news_digest.json
flint/: __init__.py  cli.py  config.py  moderation.py
flint/api/: app.py  dependencies.py  jwt_utils.py  limiter.py  middleware.py  schemas.py
flint/api/routes/: agent.py  audit.py  auth.py  benchmarks.py  demo.py  export_import.py  health.py  jobs.py  marketplace.py  metrics.py  parse.py  simulation.py  suggestions.py  versions.py  websocket.py  workflows.py
flint/cli/: main.py  simulate_cmd.py
flint/engine/: corruption.py  executor.py  executor_patch.py  failure_analysis.py  retry.py  scheduler.py  self_healing.py  topology.py  webhook.py
flint/engine/tasks/: __init__.py  agent_task.py  base.py  http_task.py  llm_task.py  python_task.py  shell_task.py  sql_task.py  webhook_task.py
flint/mcp/: server.py
flint/observability/: logging.py  metrics.py  otel.py  tracing.py
flint/parser/: dag_validator.py  nl_parser.py  prompts.py
flint/parser/providers/: claude.py  ollama.py  openai.py
flint/simulation/: __init__.py  calibration.py  confidence.py  cost_estimator.py  engine.py  models.py  risk_analyzer.py
flint/simulation/predictors/: __init__.py  agent_predictor.py  base.py  http_predictor.py  llm_predictor.py  python_predictor.py  shell_predictor.py  sql_predictor.py
flint/storage/: audit.py  database.py  models.py  models_patch.py  redis_client.py
flint/storage/repositories/: job_repo.py  task_exec_repo.py  workflow_repo.py
flint/streaming/: consumer.py  producer.py  topics.py
infra/: simulation_migration.sql
infra/grafana/: flint-dashboard.json
infra/prometheus/: prometheus.yml
tests/: conftest.py
tests/benchmarks/: throughput_bench.py
tests/unit/: test_corruption.py  test_executor.py  test_retry.py  test_topology.py
(+13 files in other folders)
