[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flint-dag"
version = "1.0.0"
description = "Describe any workflow in plain English. Flint runs it reliably."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Flint Contributors" }]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "aioredis>=2.0.1",
    "aiokafka>=0.10.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[project.scripts]
flint = "flint.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["flint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
